#add_subdirectory(helloworld)
#add_subdirectory(firstapp)
#add_subdirectory(tictactoe)
#add_subdirectory(sierpinski)
#add_subdirectory(coloredtriangles)
#add_subdirectory(asteroids4)
#add_subdirectory(waytorun)
#add_subdirectory(glbird)
#add_subdirectory(loadmodel)
#add_subdirectory(lookat)
#add_subdirectory(airplane)
add_subdirectory(airplaneObstacles)
